<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">SmartStep</string>
    <string name="start_wearable_activity">Start Wearable Activity</string>
    <string name="take_photo">Take a Photo</string>
    <string name="send_photo">Send Photo</string>
    <string name="photo_placeholder">Photo placeholder</string>
    <string name="captured_photo">Captured photo</string>
    <string name="data_item_changed">DataItem changed</string>
    <string name="data_item_deleted">DataItem deleted</string>
    <string name="data_item_unknown">Unknown DataItem type</string>
    <string name="message_from_watch">Message from watch</string>
    <string name="capability_changed">Capability changed</string>
    <string name="type_here">Type Here</string>
    <string name="send">Send</string>
    <string name="query">Query</string>
    <string name="_0">0</string>
    <string name="image">image</string>
    <string name="steps">Steps</string>
</resources>
